tests/negative/test_ref_non_type_attr.orb
fnc main () () {
    eval (sym (x 0:i32::abcd));
    = (attrOf x abcd) false;
};